make som eperfomance improvments